--- a/app/src/main/res/layout/activity_create_password.xml
+++ b/app/src/main/res/layout/activity_create_password.xml
@@ -97,7 +97,8 @@
                             android:textColor="@color/text_color"
                             android:textColorHint="@color/light_gray"
                             android:textCursorDrawable="@drawable/cursor_color"
-                            android:textSize="@dimen/_12ssp" />
+                            android:textSize="@dimen/_12ssp"
+                            android:privateImeOptions="disableSticker=true;disableGifKeyboard=true"/>
 
                     </com.google.android.material.textfield.TextInputLayout>
 
@@ -181,7 +182,8 @@
                         android:inputType="textPassword"
                         android:maxLength="12"
                         android:textColor="@color/text_color"
-                        android:textSize="@dimen/_12ssp" />
+                        android:textSize="@dimen/_12ssp"
+                        android:privateImeOptions="disableSticker=true;disableGifKeyboard=true"/>
 
                 </com.google.android.material.textfield.TextInputLayout>
 
