--- a/app/src/main/res/layout/activity_cards_authorization_failed.xml
+++ b/app/src/main/res/layout/activity_cards_authorization_failed.xml
@@ -53,7 +53,7 @@ number have locked. You will need to \ncontact Coyni customer support to unlock"
         android:id="@+id/nextCV"
         android:layout_width="match_parent"
         android:layout_height="@dimen/_50sdp"
-        app:cardBackgroundColor="#00a6a2"
+        app:cardBackgroundColor="@color/primary_green"
         android:gravity="center"
         app:cardCornerRadius="@dimen/_20sdp"
         android:layout_marginTop="@dimen/_125sdp"
