--- a/app/src/main/res/layout/activity_scnd_tym_fail.xml
+++ b/app/src/main/res/layout/activity_scnd_tym_fail.xml
@@ -41,7 +41,7 @@ your bank information or try a different payment method."
         android:id="@+id/nextCV"
         android:layout_width="match_parent"
         android:layout_height="@dimen/_43sdp"
-        app:cardBackgroundColor="#00a6a2"
+        app:cardBackgroundColor="@color/primary_green"
         android:gravity="center"
         android:layout_alignParentBottom="true"
         app:cardCornerRadius="@dimen/_21sdp"
