--- a/app/src/main/res/layout/activity_bank_america_buy_token_transaction_pend.xml
+++ b/app/src/main/res/layout/activity_bank_america_buy_token_transaction_pend.xml
@@ -167,7 +167,7 @@
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:padding="@dimen/_10sdp"
-                app:cardBackgroundColor="#00a6a2"
+                app:cardBackgroundColor="@color/primary_green"
                 app:cardCornerRadius="@dimen/_20sdp"
                 android:layout_marginTop="@dimen/_32sdp">
 
