--- a/app/src/main/res/layout/activity_first_tym_fail.xml
+++ b/app/src/main/res/layout/activity_first_tym_fail.xml
@@ -46,7 +46,7 @@
         android:id="@+id/nextCV"
         android:layout_width="match_parent"
         android:layout_height="@dimen/_43sdp"
-        app:cardBackgroundColor="#00a6a2"
+        app:cardBackgroundColor="@color/primary_green"
         android:gravity="center"
         android:layout_alignParentBottom="true"
         app:cardCornerRadius="@dimen/_21sdp"
