--- a/app/src/main/res/layout/activity_new_add_payment.xml
+++ b/app/src/main/res/layout/activity_new_add_payment.xml
@@ -26,7 +26,7 @@
             android:layout_marginBottom="@dimen/_14sdp"
             android:gravity="left"
             android:text="Add Payment Method"
-            android:textColor="#000000"
+            android:textColor="@color/black"
             android:fontFamily="@font/opensans_bold"
             android:textSize="@dimen/_16ssp"
             />
@@ -153,7 +153,6 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:layout_weight="1"
-
                 >
 
                 <TextView
