--- a/app/src/main/res/layout/activity_removing_btm_sheet.xml
+++ b/app/src/main/res/layout/activity_removing_btm_sheet.xml
@@ -11,7 +11,7 @@
     <View
         android:layout_width="@dimen/_60sdp"
         android:layout_height="@dimen/_2sdp"
-        android:background="#00a6a2"
+        android:background="@color/primary_green"
         android:layout_gravity="center"
         android:layout_marginTop="@dimen/_13sdp"
         android:layout_marginBottom="@dimen/_28sdp"
@@ -63,7 +63,7 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="@dimen/_1sdp"
-        android:background="#e8e8e8"
+        android:background="@color/light_gray"
         android:layout_gravity="center"
         android:layout_marginBottom="@dimen/_28sdp"
         />
