--- a/app/src/main/res/layout/activity_visa_card_transaction_in_progress.xml
+++ b/app/src/main/res/layout/activity_visa_card_transaction_in_progress.xml
@@ -34,7 +34,7 @@
             android:layout_height="wrap_content"
             android:text="159.40"
             android:textSize="@dimen/_35ssp"
-            android:textColor="#151515"
+            android:textColor="@color/black"
             android:fontFamily="@font/opensans_bold"
             android:layout_marginLeft="@dimen/_90sdp"
 
@@ -45,7 +45,7 @@
             android:text="CYN"
             android:textSize="@dimen/_11sdp"
             android:fontFamily="@font/opensans_semibold"
-            android:textColor="#151515"
+            android:textColor="@color/black"
             />
     </LinearLayout>
     <TextView
@@ -137,7 +137,7 @@
         android:id="@+id/nextCV"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:cardBackgroundColor="#00a6a2"
+        app:cardBackgroundColor="@color/primary_green"
         android:gravity="center"
         app:cardCornerRadius="@dimen/_20sdp"
         android:layout_marginLeft="@dimen/_21sdp"
