--- a/app/src/main/res/layout/activity_addnewdebit_card.xml
+++ b/app/src/main/res/layout/activity_addnewdebit_card.xml
@@ -55,6 +55,7 @@
                 android:fontFamily="@font/opensans_bold"
                 android:text="Add New Debit Card"
                 android:textSize="@dimen/_16ssp"
+                android:textColor="@color/black"
 
                 />
 
@@ -65,6 +66,7 @@
                 android:layout_marginBottom="@dimen/_21sdp"
                 android:fontFamily="@font/opensans_regular"
                 android:text="Please enter card details"
+                android:textColor="@color/primary_black"
                 android:textSize="@dimen/_12ssp" />
 
             <androidx.constraintlayout.widget.ConstraintLayout
@@ -95,8 +97,9 @@
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:fontFamily="@font/opensans_regular"
+                            android:fontFamily="@font/opensans_semibold"
                             android:text="John Joestar"
+                            android:textColor="@color/black"
                             android:textSize="@dimen/_12ssp" />
                     </LinearLayout>
                 </LinearLayout>
@@ -291,6 +294,7 @@
                                 android:layout_height="wrap_content"
                                 android:fontFamily="@font/opensans_regular"
                                 android:text="123"
+                                android:textColor="@color/primary_black"
                                 android:textSize="@dimen/_12ssp" />
                         </LinearLayout>
                     </LinearLayout>
