--- a/app/src/main/res/layout/fragment_face_id_disabled__bottom_sheet.xml
+++ b/app/src/main/res/layout/fragment_face_id_disabled__bottom_sheet.xml
@@ -32,7 +32,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
         android:fontFamily="@font/opensans_bold"
-        android:text="@string/faceidnotavaitxt"
+        android:text="Face ID Temporarily disabled"
         android:textColor="@color/black"
         android:textSize="@dimen/_16ssp" />
 
@@ -42,7 +42,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/_16sdp"
         android:fontFamily="@font/opensans_regular"
-        android:text="@string/faceidnotavaidescri"
+        android:text="@string/faceiddisable"
         android:textColor="@color/primary_black"
         android:textSize="@dimen/_12ssp" />
 
